[package]
name = "halfstack"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 4
rpath = false

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["tracing", "http2", "macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = { version = "0.5.2", features = ["full"] }
socketioxide = { version = "0.17.0", features = [
    "extensions",
    "state",
    "tracing",
] }
serde = { version = "1.0.219", features = ["derive"] }
bytes = "1.10.1"
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls-webpki-roots-no-provider",
    "multipart",
    "charset",
    "http2",
    "macos-system-configuration",
    "socks",
], default-features = false }
cached = { version = "0.55.1", features = [
    "async",
    "async_tokio_rt_multi_thread",
] }
dashmap = "6.1.0"
rustls = { version = "0.23.25", features = ["ring"], default-features = false }
chrono = "0.4.40"
scopeguard = "1.2.0"
num_enum = "0.7.3"
toml = "0.8.20"
# sqlx = { version = "0.8", features = [
#     "runtime-tokio",
#     "sqlite",
#     "derive",
#     "macros",
#     "migrate",
#     "uuid",
#     "chrono",
#     "json",
# ] }
serde_json = "1.0.140"
base64 = "0.22.1"
rand = "0.9.1"
rand_old = { version = "0.8.5", package = "rand" }
url = { version = "2.5.4", features = ["serde"] }
openai_dive = { version = "1.1.0", features = [
    "rustls-tls",
    "stream",
    "reqwest-websocket",
    "realtime",
] }
humantime-serde = "1.1.1"
async-channel = "2.3.1"
futures = "0.3.31"
regex = "1.11.1"
once_cell = "1.21.3"
redis = { version = "0.31.0", features = ["json", "tokio-comp"] }
image = "0.25.6"
imageproc = "0.25.0"
itertools = "0.14.0"
uuid = { version = "1.16.0", features = ["v4"] }
ipnet = { version = "2.11.0", features = ["serde"] }
duckdb = { version = "1.2.2", features = [
    "bundled",
    "chrono",
    "json",
    "serde_json",
    "url",
    "uuid",
] }
rocksdb = { git = "https://github.com/sb-child/rust-rocksdb", rev = "0ab6fce797511aca31cd8bbdbb27a3553e97939d", features = [
    "multi-threaded-cf",
] }
iroh = { version = "0.35.0", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
sha2 = "0.10.9"
ecdsa = "0.16.9"
# jsonwebkey = { git = "https://github.com/sb-child/jwk-rs", rev = "7d40b25a36275da870b82d75479e151c4bcfd0b6" }
# jsonwebtoken = { git = "https://github.com/sb-child/jsonwebtoken", rev = "ca5d218c53fa990263454b5063ebed9a36de304e" }
generic-array = "0.14.7"
jose-jws = "0.1.2"
jose-jwk = "0.1.2"
jose-jwa = "0.1.2"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
